Update people API schema and update related console and server routes
